--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookies": "^0.8.0",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "mongoose-unique-validator": "^2.0.3",
+    "postman-collection": "^3.6.8",
+    "postman-request": "^2.88.1-postman.27",
     "validator": "^13.1.17"
   },
   "description": ""
