--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
+    "mongoose-hidden": "^1.9.0",
     "mongoose-unique-validator": "^2.0.3",
     "postman-collection": "^3.6.8",
     "postman-request": "^2.88.1-postman.27",
